# Color-Separations

./: .gitignore  Cargo.toml  README.md
benches/: bench-separations.rs
source/: help.txt  separations.rs  vector.rs
tests/: cmyk.cube  cmyk_0.cube  cmyk_0m.cube  cmyk_1.cube  cmyk_1m.cube  cmyk_2.cube  cmyk_2m.cube  cmyk_3.cube  cmyk_3m.cube  rebeccapurple.cube  rebeccapurple_0.cube  rebeccapurple_0m.cube  test-separations.rs
