[package]
name = "ColorSeparations"
version = "0.1.0"
authors = ["kjchu09"]
edition = "2021"

[[bin]]
name = "separations"
path = "source/separations.rs"

[dependencies]
lazy_static = "1.4"
lcms2 = "5.4"
maplit = "1.0"
num_cpus = "1.13"
rstar = "0.9"
threadpool = "1.8"
unicase = "2.6"

[dev-dependencies]
criterion = "0.3"
serial_test = "0.7"
test-case = "2.1"

[[bench]]
name = "bench-separations"
path = "benches/bench-separations.rs"
harness = false